# attendance-admin

./: .firebaserc  .gitignore  Cargo.toml  README.md  firebase.json
.firebase/: hosting.cHVibGlj.cache
frontend/: Cargo.toml  Trunk.toml  index.html  index.js
frontend/src/: main.rs
frontend/src/bridge/: auth.rs  db.rs  generic.rs  mod.rs  storage.rs
frontend/src/bridge/js/: auth.js  storage.js
frontend/src/data/: mod.rs  order_type.rs  route.rs  student_data.rs
frontend/src/pages/: admin.rs  login.rs  mod.rs
frontend/src/pages/admin/: admin_find.rs  admin_sort.rs
frontend/styles/: admin.scss  login.scss  root.scss
public/: admin-957787f1d07978e3.css  frontend-c138f448a1df417d.js  frontend-c138f448a1df417d_bg.wasm  frontend-d54ef7e0980d53b4.js  frontend-d54ef7e0980d53b4_bg.wasm  index.html  login-e61327e5bb63a73c.css
public/snippets/frontend-aebe9231459ec4d1/src/bridge/js/: db.js  generic.js
src-tauri/: tauri.conf.json
