[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
derive = "1.0.0"
itertools = "0.10.3"
js-sys = "0.3.59"
linq = "0.0.1-release"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
yew = "0.19.3"
yew-router = "0.16.0"
indexmap = "1.9.1"
web-sys = "0.3.59"
